--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "set NODE_ENV=dev&&ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "set NODE_ENV=test&&jest",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
     "supertest": "^6.1.3",
